--- a/lander.css
+++ b/lander.css
@@ -305,57 +305,24 @@
 }
 
 @keyframes bounce {   
-0%, 100% {
-    /* transform: translate3d(25px,30px,60px) */
-   transform: translateX(0px),translateY(0px), rotate(0deg); 
-}
-/* 5%{
-    transform:  rotate(50deg);
-} */
-10%{
-    transform: translateY(850px);
-    /* translateX(100px); */
-    /* ,rotate(350deg);  ;*/
-     /* ,rotate(350deg);   */
-}
-/* 20%{
-    transform:  translateX(75px);
-} */
-/* 25%{
-    
-    ,rotate(-10deg);
-} */
-30%{
-    transform: translateY(-50px);
-
-}
-35% {
-    transform: rotate(-50deg); 
-}
-40%{
-    transform: translateY(150px);
-}
-45% {
-    transform: translateX(150px) ; 
-}
-50%{
-    transform: translateX(-200px);
-}
-55%{
-    transform: rotate(50deg); 
-}
-60%{
-    transform: translateY(100px);
-}
-65%{
-    transform: translateX(100px);
-}
-68%{
-    transform: rotate(-50deg);
-}
-70%{ 
-    transform: translateY(0px);
-   
-    /* transform: translateY(-50px); */
-    }
+0%, 100% {transform: translateX(0px),translateY(0px), rotate(0deg); }
+/* 5%{transform:  rotate(50deg);} */
+10%{transform: translateY(850px);}
+/* 20%{transform:  translateX(10px);} */
+25%{transform: rotate(250deg);}
+30%{transform: rotate(-200deg);}
+/* 30%{transform: translateY(-50px);} */
+35% {transform: rotate(-280deg); }
+35%{transform: translateY(250px);}
+/* 38%{transform: rotate(00deg); } */
+40% {transform: translateX(500px);}
+45%{transform: translateX(-250px);}
+60%{transform: rotate(50deg); }
+60%{transform: translateX(-250px); }
+/* 65%{transform: rotate(0deg); } */
+/* 65%{transform: translateX(0px);} */
+/* 60%{transform: translateX(175px);} */
+/* 65%{transform: rotate(0deg);} */
+65%{transform: translateX(500px);}
+70%{ transform: rotate(-20deg);}
 }
