--- a/lander.css
+++ b/lander.css
@@ -20,7 +20,7 @@
     box-shadow: 0px 0px 5px 0px#868686;
   }
   .container h2{
-    color: #706f6f;
+    /* color: #706f6f; */
     letter-spacing: -1px;
     margin: 2px;
   }
@@ -118,7 +118,7 @@
     height: 390px;
     overflow: scroll;
     padding: .5em;
-    color: #6d6d6d;
+    /* color: #6d6d6d; */
     text-align: center;
     letter-spacing: -1px;
     margin: auto;
@@ -144,6 +144,11 @@
     flex-direction: column;  
 }
 
+.port-logo-box{
+  /* background: rgb(255,255,255); */
+  /* background: radial-gradient(circle, rgba(255,255,255,1) 33%, rgba(255,255,255,0) 67%, rgba(255,255,255,0) 77%); */
+  animation: clipper 2s infinite;
+}
 .port-logo-box img{
     width: 150px;
     height: auto;
@@ -166,7 +171,7 @@
     z-index: 100;
 }
 .type-wrapper text{
-    color: #757575;
+    /* color: #757575; */
 }
 .grad_div{
     position: absolute;
@@ -176,8 +181,9 @@
     margin: auto;
     width: 100%;
     height: 150px;
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,1) 44%, rgba(255,255,255,0) 100%);
+    /* background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 44%, rgba(255,255,255,0) 100%); */
+    /* background: linear-gradient(0deg, rgb(0, 0, 0) 44%, rgba(255,255,255,0) 100%); */
     z-index: 3;
     /* opacity: 0.7; */
     /* border: 1px solid blue; */
@@ -186,8 +192,8 @@
 .bottom-link{
     align-items: center;
 }
-
 /*------- Lander styling------------- */
+
 /*------- Patches ------------- */
 .center{
   margin: 0;
@@ -202,6 +208,18 @@
 }
 .pad-2em {
     padding: 2em;
+}
+.bottom-right{
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  padding: .5em;
+}
+.bottom-left{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  padding: .5em;
 }
 /*------- Patches ------------- */
 
@@ -273,13 +291,174 @@
         -0.04em -0.025em 0 #fffc00;
     }
   }
-  
 /*------- Glitch Business------------- */
-/* ------------Basic Animations--------- */
-
-.bounce{
-    animation: bounce 6s linear infinite;
+/*------- line Glitch------------- */
+.static-block{
+  left: -10px;
+  width: 120%;
+  position: absolute;
+  animation: lower 5s infinite;
+  z-index: 100;
 }
+.static-block2{
+  left: -10px;
+  width: 120%;
+  position: absolute;
+  animation: lower 2s infinite;
+  z-index: 100;
+}
+@keyframes lower{
+  0%{
+    top: -20px;
+    }
+  25%{
+    opacity: 0.5;
+  }
+  50%{
+    opacity: 1.0;
+    top: 200px;
+    clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
+  }
+  75%{
+    opacity: .25;
+    top: 100px;
+  }
+  100%{
+    top: 400px;
+    opacity: 1;
+    clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%);
+  }  
+}
+.static-block hr{
+  animation: color-bounce1 3s infinite;
+}
+.static-block2 hr{
+  animation: color-bounce1 4s infinite;
+}
+.static-block:nth-child(){
+  animation: blink2 1s infinite;
+}
+.static-block2:nth-child(){
+  animation: blink2 4s infinite;
+}
+
+@keyframes color-bounce1{
+  0%,100%{
+    opacity: 1.;
+}
+  50%{
+    opacity: .0;
+  }
+}
+@keyframes color-bounce1{
+  0%,100%{
+    border: 1px solid #fff;
+    /* border: 1px solid rgb(0, 0, 0); */
+  }
+  25%{
+    opacity: 1.;
+    border: 2px solid rgb(0, 255, 234);
+    /* box-shadow: 0 0 3px rgba(255, 255, 255, 0.731), 0 0 5px rgba(0, 255, 234, 0.293); */
+  }
+  45%{
+    opacity: 1.;
+    border: 1px solid #fff;;
+  }
+  55%{
+    opacity: .7;
+    border: 2px solid rgb(255, 0, 221);
+    clip-path: polygon(0% 24%,30% 24%,30% 33%,92% 33%,92% 0%,18% 0%,18% 26%,43% 26%,43% 82%,4% 82%,4% 63%,25% 63%,25% 70%,98% 70%,98% 64%,95% 64%,95% 99%,16% 99%,16% 92%,36% 92%,36% 4%,64% 4%,64% 0%,25% 0%,25% 93%,72% 93%,72% 79%,59% 79%,59% 16%,33% 16%,33% 42%,66% 42%,66% 67%,25% 67%,25% 11%,24% 11%,24% 51%,72% 51%,72% 64%,0% 64%,0% 70%);
+    /* box-shadow: 0 0 3px rgba(255, 255, 255, 0.731), 0 0 5px rgb(255, 0, 221); */
+  }
+  60%{
+    opacity: 1.0;
+    border: 5px solid rgb(238, 255, 0);
+    
+  }
+  65%{
+    opacity: 1.;
+    border: 2px solid rgb(255, 0, 221);
+    /* box-shadow: 0 0 3px rgb(0, 255, 76), 0 0 5px rgb(0, 255, 234); */
+  }
+  70%{
+    opacity: .4;
+    border: 2px solid rgb(0, 255, 76);
+  }
+}
+/*------- line Glitch------------- */
+
+/* ------------Basic Animations--------- */
+.term-flick{
+  animation: term-flick2 6.5s ease-in-out infinite;
+}
+@keyframes term-flick2 {
+  0%,100%{
+    background-color: #fff;
+    color: #757575;
+  }
+  20%{
+    background-color: #000;
+    color: limegreen;
+  }
+  /* 30%{
+    background-color: #fff;
+    color: #757575;
+  } */
+  40%{
+    background-color: #000;
+    color: limegreen;
+  }
+  /* 45%{
+    background-color: #fff;
+    color: #757575;
+  } */
+  55%{
+    background-color: #000;
+    color: limegreen;
+  }
+  60%{
+    background-color: #000;
+    color: limegreen;
+    /* background-color: #fff;
+    color: #757575; */
+  }
+}
+@keyframes term-flick {
+  0%,100%{
+    background-color: #fff;
+    color: #757575;
+  }
+  20%{
+    background-color: #000;
+    color: limegreen;
+  }
+  30%{
+    background-color: #fff;
+    color: #757575;
+  }
+  40%{
+    background-color: #000;
+    color: limegreen;
+  }
+  /* 45%{
+    background-color: #fff;
+    color: #757575;
+  } */
+  55%{
+    background-color: #000;
+    color: limegreen;
+  }
+  60%{
+    background-color: #000;
+    color: limegreen;
+    /* background-color: #fff;
+    color: #757575; */
+  }
+}
+
+/* .bounce{
+    animation: bounce 6s linear infinite;
+} */
 .typing {
     width: 25ch;
     animation: typing 2s steps(25), blink2 .5s step-end infinite alternate;
@@ -298,6 +477,45 @@
     } */
 }
 
+@keyframes clipper {
+  0%,100%{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    animation: lower 1s ease-in;
+  }
+  25%{
+    opacity: 0.1;
+    clip-path: polygon(0% 24%,30% 24%,30% 33%,92% 33%,92% 0%,18% 0%,18% 26%,43% 26%,43% 82%,4% 82%,4% 63%,25% 63%,25% 70%,98% 70%,98% 64%,95% 64%,95% 99%,16% 99%,16% 92%,36% 92%,36% 4%,64% 4%,64% 0%,25% 0%,25% 93%,72% 93%,72% 79%,59% 79%,59% 16%,33% 16%,33% 42%,66% 42%,66% 67%,25% 67%,25% 11%,24% 11%,24% 51%,72% 51%,72% 64%,0% 64%,0% 70%);
+  
+  }
+  30%{
+    /* clip-path: polygon(0 0, 100% 0, 100% 35%, 0 35%); */
+   
+    animation: lower 3s ;
+    opacity: 0.01;
+    /* background-image: url('assets/SelfPortrait_Blink.gif'); */
+    background-size: cover;
+    left: -10px;
+    top: -10px;
+    clip-path: polygon(0 25%, 100% 0, 100% 35%, 0 35%);
+  }
+  40%{
+    clip-path: polygon(0 10%, 100% 10%, 100% 100%, 0 100%);
+    opacity: 0.1;
+  }
+  60%{
+    clip-path: polygon(0 10%, 100% 10%, 100% 0, 0 0);
+    opacity: 0.01;
+    /* background-image: url('assets/SelfPortrait_Blink.gif');
+    background-size: cover; */
+    left: 10px;
+    top: 10px;
+  }
+  75%{
+    clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0 100%);
+  }
+  
+
+}
 @keyframes blink2 {
     50% {
         border-color: transparent
@@ -305,17 +523,17 @@
 }
 
 @keyframes bounce {   
-0%, 100% {transform: translateX(0px),translateY(0px), rotate(0deg); }
+0%,100% {transform: translateX(0px),translateY(-20px), rotate(0deg); }
 /* 5%{transform:  rotate(50deg);} */
 10%{transform: translateY(850px);}
 /* 20%{transform:  translateX(10px);} */
 25%{transform: rotate(250deg);}
 30%{transform: rotate(-200deg);}
 /* 30%{transform: translateY(-50px);} */
-35% {transform: rotate(-280deg); }
+35%{transform: rotate(-280deg); }
 35%{transform: translateY(250px);}
 /* 38%{transform: rotate(00deg); } */
-40% {transform: translateX(500px);}
+40%{transform: translateX(500px);}
 45%{transform: translateX(-250px);}
 60%{transform: rotate(50deg); }
 60%{transform: translateX(-250px); }
@@ -324,5 +542,5 @@
 /* 60%{transform: translateX(175px);} */
 /* 65%{transform: rotate(0deg);} */
 65%{transform: translateX(500px);}
-70%{ transform: rotate(-20deg);}
+70%{transform: rotate(-20deg);}
 }
