--- a/lander.css
+++ b/lander.css
@@ -79,7 +79,41 @@
     right: 5px;
     /* float: right; */
   }
-  
+  .settings-button{
+    
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    margin:5px;
+    top: 10px;
+    right: 5px;
+    /* top: 10px;
+    right: 5px; */
+    /* float: right; */
+  }
+  .mail-button{
+    position: relative;
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
+    cursor: pointer;
+    background: #fff;
+    border: 1px solid #868686;
+    border-radius: 10px;
+    padding: .25em .5em;
+    animation: blink 2s ease-in infinite;
+  }
+  .mail-button :hover{
+    /* box-shadow: 0px 2px 17px 4px rgba(0,0,0,0.77); */
+  }
+  .mail-button img{
+    width: 35px;
+    height: auto;
+    
+    background: #fff;
+
+    
+  }
   /* ----Body -----*/
   
   body {
@@ -578,6 +612,11 @@ padding: .5em;
 @keyframes blink2 {
     50% {
         border-color: transparent
+    }
+}
+@keyframes blink {
+    50% {
+        opacity: 0.5;
     }
 }
 @keyframes fade-in-out {
