--- a/lander.css
+++ b/lander.css
@@ -2,11 +2,22 @@
 /*------- General styling------------- */
 .app{
     position: relative;
+    display: flex;
+    margin: auto;
+    flex-direction: column;
     top:0;
     font-family: "futura",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
       "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
       sans-serif;
-    display: block;
+    /* display: block;
+    min-width: 700px;
+    min-height: 760px;
+    width: 800px;
+    height: 800px;
+    min-width: 700px;
+    min-height: 760px;
+    max-width: 800px;
+    max-height: 800px; */
    
   }
 .container {
@@ -22,6 +33,7 @@
     border: 1px solid #868686;
     border-radius: 20px 20px;
     box-shadow: 0px 0px 5px 0px#868686;
+  
   }
   .container h2{
     /* color: #706f6f; */
@@ -97,7 +109,7 @@
     height: fit-content;
     margin: auto;
     cursor: pointer;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.115);
     border: 1px solid #868686;
     border-radius: 10px;
     padding: .25em .5em;
@@ -127,8 +139,11 @@
     padding-top: 5vh;
     display: flex;
     flex-direction: column;
-    min-width: 700px;
-    min-height: 760px;
+    /* min-width: 700px;*/
+    min-height: fit-content; 
+    max-width: auto;
+    max-height: 100Vh;
+    /* border: 1px solid blue; */
   }
   
   code {
@@ -183,9 +198,12 @@
 
 /*------- Lander styling------------- */
 .wrap{
-    position: relative;
-    display: flex;
-    flex-direction: column;  
+    /* position: relative; */
+    /* display: flex;
+    flex-direction: column;   */
+    margin: auto;
+    max-width: fit-content;
+    
 }
 
 .port-logo-box{
@@ -273,26 +291,33 @@ canvas {
   justify-content: space-between;
   flex-wrap: none;
   bottom: 0px;
+  left: 0;
+  right:0;
   height: 50px;
   width: 95%;
   padding-top: 1em;
+  white-space: nowrap;
+  /* margin: auto; */
 }
 .bottom-right{
   position: relative;
   /* bottom: 0px;
   right: 0px; */
+  white-space: nowrap;
   padding: .5em;
 }
 .bottom-center{
   position: relative;
   /* bottom: 0px;
   left: 50vw; */
+  white-space: nowrap;
   padding: .5em;
 }
 .bottom-left{
   position: relative;
   /* bottom: 0px;
   left: 0px; */
+  white-space: nowrap;
   padding: .5em;
 }
 span {
