--- a/lander.css
+++ b/lander.css
@@ -112,6 +112,7 @@
     background: rgba(255, 255, 255, 0.115);
     border: 1px solid #868686;
     border-radius: 10px;
+    width: 50px;
     padding: .25em .5em;
     animation: blink 2s ease-in infinite;
   }
