--- a/lander.css
+++ b/lander.css
@@ -9,6 +9,7 @@
     font-family: "futura",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
       "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
       sans-serif;
+      /* min-height: fit-content; */
     /* display: block;
     min-width: 700px;
     min-height: 760px;
@@ -18,6 +19,7 @@
     min-height: 760px;
     max-width: 800px;
     max-height: 800px; */
+   margin: auto;
    
   }
 .container {
@@ -33,6 +35,7 @@
     border: 1px solid #868686;
     border-radius: 20px 20px;
     box-shadow: 0px 0px 5px 0px#868686;
+    
   
   }
   .container h2{
@@ -135,15 +138,15 @@
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
+    /* border:1px solid limegreen; */
     background-color: #fff;
-    padding-top: 5vh;
+    /* padding-top: 5vh; */
     display: flex;
     flex-direction: column;
     /* min-width: 700px;*/
     min-height: fit-content; 
     max-width: auto;
-    max-height: 100Vh;
+    height: 100Vh;
     /* border: 1px solid blue; */
   }
   
@@ -166,6 +169,7 @@
     /* padding: 5px; */
     margin: 0;
     /* border: 1px solid blue; */
+
   }
   .doc-window{
     position: relative;
@@ -199,11 +203,13 @@
 
 /*------- Lander styling------------- */
 .wrap{
+    display: block;
     /* position: relative; */
     /* display: flex;
     flex-direction: column;   */
     margin: auto;
     max-width: fit-content;
+    
     
 }
 
@@ -292,13 +298,14 @@ canvas {
   justify-content: space-between;
   flex-wrap: none;
   bottom: 0px;
-  left: 0;
-  right:0;
+  /* right:0; */
   height: 50px;
-  width: 95%;
+  width: 95vw;
   padding-top: 1em;
+  /* padding-right: 1em; */
   white-space: nowrap;
-  /* margin: auto; */
+  /* margin: auto -.5em; */
+  overflow: none;
 }
 .bottom-right{
   position: relative;
