--- a/lander.css
+++ b/lander.css
@@ -19,7 +19,6 @@
     min-height: 760px;
     max-width: 800px;
     max-height: 800px; */
-   margin: auto;
    
   }
 .container {
@@ -147,6 +146,7 @@
     min-height: fit-content; 
     max-width: auto;
     height: 100Vh;
+    /* top:10px; */
     /* border: 1px solid blue; */
   }
   
@@ -306,6 +306,8 @@ canvas {
   white-space: nowrap;
   /* margin: auto -.5em; */
   overflow: none;
+ background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 44%, rgba(255,255,255,0) 100%);
 }
 .bottom-right{
   position: relative;
